src/bindgen.rs

extern "C" {
    pub fn rasqal_new_floating_literal(
        world: *mut rasqal_world,
        type_: rasqal_literal_type,
        d: f64,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_float_literal(world: *mut rasqal_world, f: f32) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_uri_literal(
        world: *mut rasqal_world,
        uri: *mut raptor_uri,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_pattern_literal(
        world: *mut rasqal_world,
        pattern: *const libc::c_uchar,
        flags: *const libc::c_char,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_string_literal(
        world: *mut rasqal_world,
        string: *const libc::c_uchar,
        language: *const libc::c_char,
        datatype: *mut raptor_uri,
        datatype_qname: *const libc::c_uchar,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_simple_literal(
        world: *mut rasqal_world,
        type_: rasqal_literal_type,
        string: *const libc::c_uchar,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_boolean_literal(
        world: *mut rasqal_world,
        value: libc::c_int,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_variable_literal(
        world: *mut rasqal_world,
        variable: *mut rasqal_variable,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_decimal_literal(
        world: *mut rasqal_world,
        string: *const libc::c_uchar,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_decimal_literal_from_decimal(
        world: *mut rasqal_world,
        string: *const libc::c_uchar,
        decimal: *mut rasqal_xsd_decimal,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_datetime_literal_from_datetime(
        world: *mut rasqal_world,
        dt: *mut rasqal_xsd_datetime,
    ) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_literal_from_literal(l: *mut rasqal_literal) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_free_literal(l: *mut rasqal_literal);
}
extern "C" {
    pub fn rasqal_literal_print(l: *mut rasqal_literal, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_literal_type_label(type_: rasqal_literal_type) -> *const libc::c_char;
}
extern "C" {
    pub fn rasqal_literal_print_type(l: *mut rasqal_literal, fh: *mut FILE);
}
extern "C" {
    pub fn rasqal_literal_as_variable(l: *mut rasqal_literal) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_literal_as_counted_string(
        l: *mut rasqal_literal,
        len_p: *mut usize,
        flags: libc::c_int,
        error_p: *mut libc::c_int,
    ) -> *const libc::c_uchar;
}
extern "C" {
    pub fn rasqal_literal_as_string(l: *mut rasqal_literal) -> *const libc::c_uchar;
}
extern "C" {
    pub fn rasqal_literal_as_string_flags(
        l: *mut rasqal_literal,
        flags: libc::c_int,
        error_p: *mut libc::c_int,
    ) -> *const libc::c_uchar;
}
extern "C" {
    pub fn rasqal_literal_as_node(l: *mut rasqal_literal) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_literal_datatype(l: *mut rasqal_literal) -> *mut raptor_uri;
}
extern "C" {
    pub fn rasqal_literal_value(l: *mut rasqal_literal) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_literal_compare(
        l1: *mut rasqal_literal,
        l2: *mut rasqal_literal,
        flags: libc::c_int,
        error_p: *mut libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_literal_equals(l1: *mut rasqal_literal, l2: *mut rasqal_literal) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_literal_same_term(
        l1: *mut rasqal_literal,
        l2: *mut rasqal_literal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_literal_get_rdf_term_type(l: *mut rasqal_literal) -> rasqal_literal_type;
}
extern "C" {
    pub fn rasqal_literal_get_type(l: *mut rasqal_literal) -> rasqal_literal_type;
}
extern "C" {
    pub fn rasqal_literal_get_language(l: *mut rasqal_literal) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_literal_is_rdf_literal(l: *mut rasqal_literal) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_prefix(
        world: *mut rasqal_world,
        prefix: *const libc::c_uchar,
        uri: *mut raptor_uri,
    ) -> *mut rasqal_prefix;
}
extern "C" {
    pub fn rasqal_free_prefix(p: *mut rasqal_prefix);
}
extern "C" {
    pub fn rasqal_prefix_print(p: *mut rasqal_prefix, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_row_for_size(world: *mut rasqal_world, size: libc::c_int) -> *mut rasqal_row;
}
extern "C" {
    pub fn rasqal_free_row(row: *mut rasqal_row);
}
extern "C" {
    pub fn rasqal_row_set_value_at(
        row: *mut rasqal_row,
        offset: libc::c_int,
        value: *mut rasqal_literal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_triple(
        subject: *mut rasqal_literal,
        predicate: *mut rasqal_literal,
        object: *mut rasqal_literal,
    ) -> *mut rasqal_triple;
}
extern "C" {
    pub fn rasqal_new_triple_from_triple(t: *mut rasqal_triple) -> *mut rasqal_triple;
}
extern "C" {
    pub fn rasqal_free_triple(t: *mut rasqal_triple);
}
extern "C" {
    pub fn rasqal_triple_print(t: *mut rasqal_triple, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_triple_set_origin(t: *mut rasqal_triple, l: *mut rasqal_literal);
}
extern "C" {
    pub fn rasqal_triple_get_origin(t: *mut rasqal_triple) -> *mut rasqal_literal;
}
extern "C" {
    pub fn rasqal_new_variable_from_variable(v: *mut rasqal_variable) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_free_variable(v: *mut rasqal_variable);
}
extern "C" {
    pub fn rasqal_variable_print(v: *mut rasqal_variable, fh: *mut FILE) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_variable_set_value(v: *mut rasqal_variable, l: *mut rasqal_literal);
}
extern "C" {
    pub fn rasqal_new_variables_table(world: *mut rasqal_world) -> *mut rasqal_variables_table;
}
extern "C" {
    pub fn rasqal_free_variables_table(vt: *mut rasqal_variables_table);
}
extern "C" {
    pub fn rasqal_variables_table_add(
        vt: *mut rasqal_variables_table,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
        value: *mut rasqal_literal,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_variables_table_add2(
        vt: *mut rasqal_variables_table,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
        name_len: usize,
        value: *mut rasqal_literal,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_variables_table_add_variable(
        vt: *mut rasqal_variables_table,
        variable: *mut rasqal_variable,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_variables_table_get_by_name(
        vt: *mut rasqal_variables_table,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
    ) -> *mut rasqal_variable;
}
extern "C" {
    pub fn rasqal_variables_table_contains(
        vt: *mut rasqal_variables_table,
        type_: rasqal_variable_type,
        name: *const libc::c_uchar,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_free_memory(ptr: *mut libc::c_void);
}
extern "C" {
    pub fn rasqal_alloc_memory(size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn rasqal_calloc_memory(nmemb: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn rasqal_new_xsd_decimal(world: *mut rasqal_world) -> *mut rasqal_xsd_decimal;
}
extern "C" {
    pub fn rasqal_free_xsd_decimal(dec: *mut rasqal_xsd_decimal);
}
extern "C" {
    pub fn rasqal_xsd_decimal_set_string(
        dec: *mut rasqal_xsd_decimal,
        string: *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_get_double(dec: *mut rasqal_xsd_decimal) -> f64;
}
extern "C" {
    pub fn rasqal_xsd_decimal_get_long(
        dec: *mut rasqal_xsd_decimal,
        error_p: *mut libc::c_int,
    ) -> libc::c_long;
}
extern "C" {
    pub fn rasqal_xsd_decimal_as_string(dec: *mut rasqal_xsd_decimal) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_decimal_as_counted_string(
        dec: *mut rasqal_xsd_decimal,
        len_p: *mut usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_decimal_set_long(
        dec: *mut rasqal_xsd_decimal,
        l: libc::c_long,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_set_double(dec: *mut rasqal_xsd_decimal, d: f64) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_print(dec: *mut rasqal_xsd_decimal, stream: *mut FILE)
        -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_add(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_subtract(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_multiply(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_divide(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_negate(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_compare(
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_equals(
        a: *mut rasqal_xsd_decimal,
        b: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_is_zero(d: *mut rasqal_xsd_decimal) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_abs(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_round(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_ceil(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_decimal_floor(
        result: *mut rasqal_xsd_decimal,
        a: *mut rasqal_xsd_decimal,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_xsd_date(
        world: *mut rasqal_world,
        date_string: *const libc::c_char,
    ) -> *mut rasqal_xsd_date;
}
extern "C" {
    pub fn rasqal_free_xsd_date(d: *mut rasqal_xsd_date);
}
extern "C" {
    pub fn rasqal_xsd_date_to_counted_string(
        date: *const rasqal_xsd_date,
        len_p: *mut usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_date_to_string(d: *const rasqal_xsd_date) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_date_equals(
        d1: *const rasqal_xsd_date,
        d2: *const rasqal_xsd_date,
        incomparible_p: *mut libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_date_compare(
        d1: *const rasqal_xsd_date,
        d2: *const rasqal_xsd_date,
        incomparible_p: *mut libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_new_xsd_datetime(
        world: *mut rasqal_world,
        datetime_string: *const libc::c_char,
    ) -> *mut rasqal_xsd_datetime;
}
extern "C" {
    pub fn rasqal_new_xsd_datetime_from_unixtime(
        world: *mut rasqal_world,
        secs: time_t,
    ) -> *mut rasqal_xsd_datetime;
}
extern "C" {
    pub fn rasqal_new_xsd_datetime_from_timeval(
        world: *mut rasqal_world,
        tv: *mut timeval,
    ) -> *mut rasqal_xsd_datetime;
}
